--- a/index.html
+++ b/index.html
@@ -1,1 +1,120 @@
+<!DOCTYPE html>
 
+<html lang="en">
+  <link rel="stylesheet" href="styles.css">
+  <link
+href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+rel="stylesheet"
+integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+crossorigin="anonymous"
+/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Challenge</title>
+  </head>
+  <center>
+  <body id="body">
+    <h1>Adam Smith</h1>
+    <p id="bio">BLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc id cursus metus aliquam eleifend. Augue lacus viverra vitae congue eu consequat. 
+      Felis bibendum ut tristique et egestas quis ipsum suspendisse. Erat imperdiet sed euismod nisi porta. 
+      Risus ultricies tristique nulla aliquet enim. Quam adipiscing vitae proin sagittis nisl rhoncus. 
+      Blandit massa enim nec dui nunc mattis enim ut tellus.<a id="link" href="https://www.linkedin.com">Linkedin</a>  elit at imperdiet dui accumsan sit amet nulla. 
+      Justo donec enim diam vulputate ut pharetra sit amet aliquam. Et malesuada fames ac turpis egestas sed tempus. 
+      Id donec ultrices tincidunt arcu non sodales. Tellus orci ac auctor augue. 
+      Tortor consequat id <a id="link" href="https://www.linkedin.com">Instagram</a> porta nibh venenatis cras sed felis eget. Bibendum enim facilisis gravida neque convallis a cras semper. 
+      Accumsan in nisl nisi scelerisque eu. Vulputate enim nulla aliquet porttitor lacus luctus accumsan tortor. 
+      Sed viverra ipsum nunc aliquet bibendum enim facilisis. Nibh tellus molestie nunc non blandit massa.</p>
+
+      <div id="education">
+        <h2>Education history</h2>
+      <ol>
+        <li>Masters Degree</li>
+       <table style="width:100%">
+        <tr>
+          <th>Institution</th>
+          <th>Degree</th>
+          <th>Year Started</th>
+          <th>Year Ended</th>
+        </tr>
+        <tr>
+          <td>Oxford University</td>
+          <td>Masters in Cyber Security</td>
+          <td>2023</td>
+          <td>2023</td>
+        </tr>
+       </table>
+
+        <li>Undergraduate Degree</li>
+        <table style="width:100%">
+          <tr>
+            <th>Institution</th>
+            <th>Degree</th>
+            <th>Year Started</th>
+            <th>Year Ended</th>
+          </tr>
+          <tr>
+            <td>Pwani University</td>
+            <td>Bsc.Computer Science</td>
+            <td>2014</td>
+            <td>2018</td>
+          </tr>
+         </table>
+
+        <li>O-Levels</li>
+        <table style="width:100%">
+          <tr>
+            <th>Institution</th>
+            <th>Degree</th>
+            <th>Year Started</th>
+            <th>Year Ended</th>
+          </tr>
+          <tr>
+            <td>Oriwo Boys High School</td>
+            <td>KCSE</td>
+            <td>2010</td>
+            <td>2013</td>
+          </tr>
+         </table>
+         
+        <li>Primary School</li>
+        <table style="width:100%">
+          <tr>
+            <th>Institution</th>
+            <th>Degree</th>
+            <th>Year Started</th>
+            <th>Year Ended</th>
+          </tr>
+          <tr>
+            <td>Mawego Mixed Primary</td>
+            <td>KCPE</td>
+            <td>2003</td>
+            <td>2009</td>
+          </tr>
+         </table>
+      </ol>
+
+    </div>
+    <h2>Projects</h2>
+    <div id="projects">
+
+    </div>
+    <h2>Social media</h2>
+    <div id="social">
+<ul>
+  <li>
+    <a id="social-media-links"href="https://www.facebook.com" class="social-media-links">Facebook</a>   
+</li> 
+<li>  
+  <a id="social-media-links"href="https://www.instagram.com" class="social-media-links">Instagram</a>  
+  </li>   
+<li>  
+<a  id="social-media-links"href="https://www.twitter.com" class="social-media-links">Twitter</a>  
+</li>  
+</ul>
+    </div>
+  </body>
+  </center>
+</html>
